force-app/main/default/objects/Leave_Request__c/fields/Calendar_Label__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Label__c</fullName>
    <formula>CreatedBy.FirstName + &apos; &apos; +  CreatedBy.LastName + &apos; - &apos; +  Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calendar Label</label>
    <type>Text</type>
</CustomField>