force-app/main/default/objects/Leave_Request__c/fields/Days__c.field-meta.xml
<CustomField>
    <fullName>Days__c</fullName>
    <inlineHelpText>Number of days requested (use decimals for half days, e.g. 0.5)</inlineHelpText>
    <label>Days</label>
    <precision>18</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>