force-app/main/default/objects/Leave_Request__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <formula>CASE(
 WEEKDAY(Start_Date__c),
  1, (Start_Date__c) + CEILING(Days__c) - 1 + 
      FLOOR((Days__c-1)/5)*2,
  2, (Start_Date__c) + CEILING(Days__c) - 1 + 
      FLOOR((Days__c)/5)*2,
  3, (Start_Date__c) + CEILING(Days__c) - 1 + 
      FLOOR((Days__c+1)/5)*2,
  4, (Start_Date__c) + CEILING(Days__c) - 1 + 
      FLOOR((Days__c+2)/5)*2,
  5, (Start_Date__c) + CEILING(Days__c) - 1 + 
      FLOOR((Days__c+3)/5)*2,
  6, (Start_Date__c) + CEILING(Days__c) - 1 + 
      CEILING((Days__c)/5)*2,
  7, (Start_Date__c) - IF(Days__c - 1&gt;0,1,0) + CEILING(Days__c) - 1 + 
      CEILING((Days__c)/5)*2,
 null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date</label>
    <type>Date</type>
</CustomField>