force-app/main/default/objects/Leave_Request__c/fields/Leave_Summary__c.field-meta.xml
<CustomField>
    <fullName>Leave_Summary__c</fullName>
    <label>Leave Summary</label>
    <referenceTo>Leave_Summary__c</referenceTo>
    <relationshipLabel>Leave Requests</relationshipLabel>
    <relationshipName>Leave_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>