force-app/main/default/objects/Leave_Request__c/fields/Leave_Type__c.field-meta.xml
<CustomField>
    <fullName>Leave_Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual Leave</fullName>
                <default>true</default>
                <label>Annual Leave</label>
            </value>
            <value>
                <fullName>Sickness Declaration</fullName>
            </value>
            <value>
                <fullName>Compassionate Leave</fullName>
            </value>
            <value>
                <fullName>Parental Leave</fullName>
            </value>
            <value>
                <fullName>Paternity Leave</fullName>
            </value>
            <value>
                <fullName>Maternity Leave</fullName>
            </value>
            <value>
                <fullName>Unpaid Leave</fullName>
            </value>
            <value>
                <fullName>Time in lieu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>