force-app/main/default/objects/Leave_Request__c/fields/Remaining_Annual_Leave__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Annual_Leave__c</fullName>
    <formula>Leave_Summary__r.Remaining_Annual_Leave__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Annual Leave</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>