force-app/main/default/objects/Leave_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Leave_Type__c</columns>
    <columns>Leave_Summary__c</columns>
    <columns>Description__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Start_Date__c</columns>
    <columns>Days__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>